--- a/package.json
+++ b/package.json
@@ -4,20 +4,25 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
+    "chai-http": "^4.3.0",
     "crypto-js": "^3.1.9-1",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "mocha": "^8.1.1",
     "mongodb": "^3.3.4",
     "mongoose": "^5.7.10",
     "react-multi-select-component": "^3.0.1",
     "semantic-ui-react": "^1.1.1",
     "usestate": "^1.1.3"
+  },
+  "devDependencies": {
+    "chai": "^4.2.0"
   }
 }
